# [metadata] section is for defining metadata about the package.
[metadata]
# Specify the license under which the package is released.
license = MIT
# Point to the file that contains the text of the license.
license_file = LICENSE
# A list of classifiers that describe the project. Classifiers are predefined values that can give potential users a clear idea of the project's suitability for their needs. They include supported Python versions, project status, and environment.
classifiers = 
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent

# [options] section is for global options.
[options]
# A list of other Python packages that this package depends on.
install_requires = 
    ensure==1.0.2
    py-youtube==1.1.7
# Specify which versions of Python the package is compatible with.
python_requires = >=3.7

# [options.extras_require] section is used to define optional dependencies. These can be installed using the extras syntax (e.g., pip install package[testing]).
[options.extras_require]
testing =
    pytest>=7.1.3
    mypy>=0.971
    flake8>=5.0.4
    tox>=3.25.1
    black>=22.8.0

# [options.package_data] section is for including additional files in the package.
[options.package_data]
# Include a py.typed file for the MongoDB-Connect package, which indicates that the package has type annotations.
MongoDB-Connect=py.typed

# [flake8] section is for configuring the flake8 linter.
[flake8]
# Set the maximum allowed line length in the code.
max-line-length = 160
# Exclude certain files from linting; here it's any __init__.py files.
exclude = __init__.py
